<resources>
    <string name="app_name">Telolet</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="menu_logout">Log out</string>
    <string name="try_again">Try again</string>
    <string name="permissions_must_be_granted">Permissions must be granted</string>
    <string name="public_user_image_content_description">Profile image</string>
    <string name="placeholder_public_user_handle">Bus 123</string>
    <string name="progress_loading">Preparing you for fun…</string>
    <string name="base_handle">Bus</string>
    <string name="bus_image_base_file_name" translatable="false">bus</string>
    <string name="menu_fetch_remote_config">Fetch remote config</string>
    <string name="title_activity_invite_friends">Invite friends</string>
    <string name="invite_friends_button">Invite your nearest friends</string>
    <string name="invite_friends_engagement_text">Looks like this game would be more fun with some of your friends around!!!</string>
    <string name="menu_invite_friends">Invite fun friends</string>
    <string name="friend_invitation_title_v1">Om, Telolet, Om!</string>
    <string name="friend_invitation_message_v1">Om, Telolet, Om! Download this awesome app and honk for me! #OmTeloletOm</string>
    <string name="friend_invitation_cta_v1">Telolelolet!!!</string>
    <string name="friend_invitation_title_v2">Invite fun friends</string>
    <string name="friend_invitation_message_v2">Om, Telolet, Om! Join me in this fun location based game! #OmTeloletOm</string>
    <string name="friend_invitation_cta_v2">Join your friends!</string>
    <string name="login_anonymous_button">Login anonymously</string>
    <string name="om_telolet_om">Om, Telolet, Om!</string>
    <string name="notification_pending_telolet_requests">People want you to honk the horn!!!</string>
    <string name="t">T</string>
    <string name="e">E</string>
    <string name="l">L</string>
    <string name="o">O</string>
    <string name="update_required_title">Required Update</string>
    <string name="update_required_message">Your app version is outdated. Update to the latest version to continue playing.</string>
    <string name="update_app_button_text">Update now</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_app_version">Version</string>
    <string name="pref_title_user_handle">Name</string>
    <string name="action_settings">Settings</string>
    <string name="pref_category_application">Application</string>
    <string name="pref_category_user_profile">User profile</string>
</resources>
