<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="se.oddbit.telolet.activities.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="5"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_fetch_remote_config"
        android:orderInCategory="50"
        android:title="@string/menu_fetch_remote_config"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_invite_friends"
        android:orderInCategory="10"
        android:title="@string/menu_invite_friends"
        android:visible="true"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/menu_logout"
        android:visible="true"
        app:showAsAction="never"/>
</menu>
