<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    xmlns:card_view="http://schemas.android.com/tools"
                                    android:id="@+id/user_card"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="16dp"
                                    android:clickable="true"
                                    android:minHeight="?android:attr/listPreferredItemHeight"
                                    android:padding="8dp"
                                    card_view:cardCornerRadius="8dp"
                                    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/user_content_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/user_image"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="start"
            android:adjustViewBounds="false"
            android:contentDescription="@string/public_user_image_content_description"
            android:cropToPadding="false"
            android:padding="0dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_directions_bus_black_24dp"/>

        <TextView
            android:id="@+id/user_handle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/placeholder_public_user_handle"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <LinearLayout
            android:id="@+id/telolet_text_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t"
                android:textAllCaps="true"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e"
                android:textAllCaps="true"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/l"
                android:textAllCaps="true"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/o"
                android:textAllCaps="true"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/l"
                android:textAllCaps="true"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e"
                android:textAllCaps="true"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/l"
                android:textAllCaps="true"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/o"
                android:textAllCaps="true"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/l"
                android:textAllCaps="true"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e"
                android:textAllCaps="true"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t"
                android:textAllCaps="true"
                android:textSize="25sp"/>
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>